# Pku-programming-big-homework-qt

./: README.md
DeskPet/: .gitignore  CMakeLists.txt  FileTransferDialog.cpp  FileTransferDialog.h  FileTransferServer.cpp  FileTransferServer.h  PetWindow.cpp  PetWindow.h  QRCodeGenerator.cpp  QRCodeGenerator.h  aichatmanager.cpp  aichatmanager.h  aisettingsdialog.cpp  aisettingsdialog.h  animationmanager.cpp  animationmanager.h  chatbubbledialog.cpp  chatbubbledialog.h  main.cpp  petcontroller.cpp  petcontroller.h  res.qrc  traymenumanager.cpp  traymenumanager.h
DeskPet/html/: file_browser.html
